--- a/flower.html
+++ b/flower.html
@@ -21,8 +21,8 @@
         <div class="nav-links">
           <ul class="nav-item">
             <li><a href="#">Home</a></li>
-            <li><a href="#">Shop</a></li>
-            <li><a href="#">About</a></li>
+            <li><a class="shop" href="#">Shop</a></li>
+            <li><a class="shop" href="#">About</a></li>
           </ul>
           <div class="cart">
             <a href="#"><i class="fa-solid fa-cart-shopping"></i> Cart ($56)</a>
@@ -31,7 +31,119 @@
       </nav>
     </header>
 
-    <main></main>
+    <main class="main">
+      <section class="fresh-flower">
+        <div class="fresh-flower-description">
+          <h1>ALWAYS <span class="color-primary-text">FRESH</span></h1>
+          <h1 class="color-primary-text">FLOWERS</h1>
+          <p class="color-paragraph">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh flowers that are perfect for any occasion.
+          </p>
+        </div>
+        <div class="fresh-flower-image">
+          <img src="./assets/hero-flower.png" alt="" />
+        </div>
+      </section>
+      <section class="card">
+        <h1><span class="color-primary-text">Our</span> Plants</h1>
+        <p class="color-paragraph">
+          Indulge your senses with the beauty and fragrance of our fresh flower
+          shop. From <br />
+          classic roses to exotic blooms, we offer a wide variety of fresh.
+        </p>
+      </section>
+      <section class="card-prices">
+        <div class="card-demu">
+          <img src="./assets/sample-flower-image.png" alt="" />
+          <p>Lily Blossom</p>
+          <p>20 USD</p>
+          <button class="but-praymary">ADD TO CART</button>
+        </div>
+        <!-- ----------------- -->
+        <div class="card-demu">
+          <img src="./assets/sample-flower-image.png" alt="" />
+          <p>Lily Blossom</p>
+          <p>20 USD</p>
+          <button class="but-praymary">ADD TO CART</button>
+        </div>
+        <div class="card-demu">
+          <img src="./assets/sample-flower-image.png" alt="" />
+          <p>Lily Blossom</p>
+          <p>20 USD</p>
+          <button class="but-praymary">ADD TO CART</button>
+        </div>
+        <!-- ----------------- -->
+        <div class="card-demu">
+          <img src="./assets/sample-flower-image.png" alt="" />
+          <p>Lily Blossom</p>
+          <p>20 USD</p>
+          <button class="but-praymary">ADD TO CART</button>
+        </div>
+        <div class="card-demu">
+          <img src="./assets/sample-flower-image.png" alt="" />
+          <p>Lily Blossom</p>
+          <p>20 USD</p>
+          <button class="but-praymary">ADD TO CART</button>
+        </div>
+        <!-- ----------------- -->
+        <div class="card-demu">
+          <img src="./assets/sample-flower-image.png" alt="" />
+          <p>Lily Blossom</p>
+          <p>20 USD</p>
+          <button class="but-praymary">ADD TO CART</button>
+        </div>
+        <div class="card-demu">
+          <img src="./assets/sample-flower-image.png" alt="" />
+          <p>Lily Blossom</p>
+          <p>20 USD</p>
+          <button class="but-praymary">ADD TO CART</button>
+        </div>
+        <!-- ----------------- -->
+        <div class="card-demu">
+          <img src="./assets/sample-flower-image.png" alt="" />
+          <p>Lily Blossom</p>
+          <p>20 USD</p>
+          <button class="but-praymary">ADD TO CART</button>
+        </div>
+      </section>
+      <section class="flower-plant">
+        <div class="flower-plant-1">
+          <div><img src="./assets/flower-store.png" alt="" /></div>
+          <div>
+            <img
+              class="trusted-badge"
+              src="./assets/trusted-badge.png"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="flower-plant-paragraph">
+          <h1>
+            Flower & Plants <br />
+            Lover
+          </h1>
+          <p class="list-item">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh.
+          </p>
+          <!-- <br /><br /> -->
+          <p class="list-item">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh.
+          </p>
+          <!-- <br /><br /> -->
+          <p class="list-item">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh.
+          </p>
+        </div>
+      </section>
+    </main>
 
     <footer></footer>
   </body>
