--- a/flower.html
+++ b/flower.html
@@ -145,6 +145,49 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer class="footer">
+      <div>
+        <img src="./assets/logo.png" alt="" />
+        <p>
+          Indulge your senses with the <br />
+          beauty and fragrance of our fresh <br />
+          flower shop.
+        </p>
+      </div>
+      <div class="footer-blog">
+        <ul>
+          <li>Home</li>
+          <li>About Us</li>
+          <li>Blog</li>
+          <li>FAQ</li>
+          <li>Contact us</li>
+        </ul>
+        <ul>
+          <li>Features</li>
+          <li>Pricing</li>
+          <li>Privacy Policy</li>
+          <li>Terms of Service</li>
+          <li>Help Center</li>
+        </ul>
+      </div>
+      <div class="footer-img">
+        <img src="./assets/icon-linkedin.png" alt="" />
+        <img src="./assets/icon-twitter.png" alt="" />
+        <img src="./assets/icon-facebook.png" alt="" />
+        <img src="./assets/icon-youtube.png" alt="" />
+      </div>
+    </footer>
+
+    <div class="box">
+      <div class="bg-content">
+        <div class="bg-content-1">
+          <h6>Join the colorful Bunch</h6>
+          <div class="subscrive-box">
+            <input type="text" placeholder="Write Email" />
+            <button>Subscrive</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
