--- a/flower.html
+++ b/flower.html
@@ -37,9 +37,11 @@
           <h1>ALWAYS <span class="color-primary-text">FRESH</span></h1>
           <h1 class="color-primary-text">FLOWERS</h1>
           <p class="color-paragraph">
-            Indulge your senses with the beauty and fragrance of our fresh
-            flower shop. From classic roses to exotic blooms, we offer a wide
-            variety of fresh flowers that are perfect for any occasion.
+            Indulge your senses with the beauty and fragrance <br />
+            of our fresh flower shop. From classic roses to exotic blooms,
+            <br />
+            we offer a wide variety of fresh flowers that are perfect for any
+            occasion.
           </p>
         </div>
         <div class="fresh-flower-image">
@@ -47,7 +49,9 @@
         </div>
       </section>
       <section class="card">
-        <h1><span class="color-primary-text">Our</span> Plants</h1>
+        <h1 class="our-pan">
+          <span class="color-primary-text">Our</span> Plants
+        </h1>
         <p class="color-paragraph">
           Indulge your senses with the beauty and fragrance of our fresh flower
           shop. From <br />
@@ -185,6 +189,41 @@
           <div class="subscrive-box">
             <input type="text" placeholder="Write Email" />
             <button>Subscrive</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- ------------------------------------------ -->
+    <div class="discound">
+      <div class="deals-section">
+        <h2>Latest <span>Deals</span></h2>
+        <p>
+          Indulge your senses with the beauty and fragrance of our fresh flower
+          shop. From classic roses to exotic blooms, we offer a wide variety of
+          fresh.
+        </p>
+
+        <div class="deals-container">
+          <div class="left-column">
+            <div class="deal-box1 container-1">
+              <div class="content">
+                <h3>60% Off | Bloom Plant</h3>
+                <a href="#">Shop Now</a>
+              </div>
+            </div>
+            <div class="deal-box2 container-2">
+              <div class="content">
+                <h3>30% Off | Ana Plant</h3>
+                <a href="#">Shop Now</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="deal-box3 right-column">
+            <div class="content content-big">
+              <h3>25% Off | Zabo Plant</h3>
+              <a href="#">Shop Now</a>
+            </div>
           </div>
         </div>
       </div>
