--- a/index.html
+++ b/index.html
@@ -2,136 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Deals Section</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 20px;
-        background: #f5f5f5;
-      }
-
-      .deals-section {
-        text-align: center;
-        padding: 20px;
-      }
-
-      .deals-section h2 {
-        color: orange;
-        display: inline;
-      }
-
-      .deals-section h2 span {
-        color: #333;
-      }
-
-      .deals-section p {
-        color: #666;
-        max-width: 600px;
-        margin: auto;
-      }
-
-      .deals-container {
-        display: flex;
-        gap: 10px;
-        margin-top: 30px;
-        justify-content: center;
-        flex-wrap: wrap;
-      }
-
-      .deal-box {
-        background-image: url(../B12A02-Responsive-Flowers/assets/deal-bloom.png);
-        position: relative;
-        flex: 1;
-        min-width: 250px;
-        height: 200px;
-        background-size: cover;
-        background-position: center;
-        color: white;
-        border-radius: 10px;
-        overflow: hidden;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-      }
-
-      .deal-box .content {
-        background-color: rgba(0, 0, 0, 0.5);
-        padding: 10px 20px;
-        border-radius: 5px;
-      }
-
-      .deal-box .content h3 {
-        margin: 0;
-        font-size: 18px;
-      }
-
-      .deal-box .content a {
-        display: inline-block;
-        margin-top: 10px;
-        padding: 6px 14px;
-        background-color: #fff;
-        color: #000;
-        text-decoration: none;
-        border-radius: 3px;
-        font-weight: bold;
-      }
-
-      .left-column {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        flex: 1;
-      }
-
-      .right-column {
-        flex: 2;
-      }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
   </head>
-  <body>
-    <div class="deals-section">
-      <h2>Latest <span>Deals</span></h2>
-      <p>
-        Indulge your senses with the beauty and fragrance of our fresh flower
-        shop. From classic roses to exotic blooms, we offer a wide variety of
-        fresh.
-      </p>
-
-      <div class="deals-container">
-        <div class="left-column">
-          <div
-            class="deal-box"
-            style="
-              background-image: url('../B12A02-Responsive-Flowers/assets/deal-bloom.png');
-            "
-          >
-            <div class="content">
-              <h3>60% Off | Bloom Plant</h3>
-              <a href="#">Shop Now</a>
-            </div>
-          </div>
-          <div
-            class="deal-box"
-            style="background-image: url('https://i.imgur.com/su8RblX.jpg')"
-          >
-            <div class="content">
-              <h3>30% Off | Ana Plant</h3>
-              <a href="#">Shop Now</a>
-            </div>
-          </div>
-        </div>
-
-        <div
-          class="deal-box right-column"
-          style="background-image: url('https://i.imgur.com/hxNclZR.jpg')"
-        >
-          <div class="content">
-            <h3>25% Off | Zabo Plant</h3>
-            <a href="#">Shop Now</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
+  <body></body>
 </html>
